Sorgente/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Sottocategoria_origine_in_fase_di_ordine__c</fullName>
        <label>Sottocategoria origine in fase di ordine</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Origine_in_fase_di_ordine__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSCO</fullName>
                </value>
                <value>
                    <fullName>Ok Corso Preparto</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
                <value>
                    <fullName>Diagnosi prenatale</fullName>
                </value>
                <value>
                    <fullName>BRCA</fullName>
                </value>
                <value>
                    <fullName>Baby&apos;s Voice</fullName>
                </value>
                <value>
                    <fullName>i-Contrazioni</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Bimbinfiera</fullName>
                </value>
                <value>
                    <fullName>i-Gravidanza</fullName>
                </value>
                <value>
                    <fullName>i-Obstetrics</fullName>
                </value>
                <value>
                    <fullName>i-Mamma</fullName>
                </value>
                <value>
                    <fullName>Sito Sorgente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialista__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specialista</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialista_perso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specialista perso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spedizione_certificato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spedizione certificato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stanza__c</fullName>
        <label>Stanza</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stato_amministrazione__c</fullName>
        <label>Stato amministrazione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stato_fatturazione__c</fullName>
        <defaultValue>&apos;Italia&apos;</defaultValue>
        <label>Nazione fatturazione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stato_modulistica__c</fullName>
        <label>Stato modulistica</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ritirata</fullName>
                </value>
                <value>
                    <fullName>compilata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stato_referti__c</fullName>
        <label>Stato referti</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ritirati</fullName>
                </value>
                <value>
                    <fullName>consegnati in DS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stato_spedizione__c</fullName>
        <defaultValue>&apos;Italia&apos;</defaultValue>
        <label>Nazione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_analisi__c</fullName>
        <label>Status analisi</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ia risultati</fullName>
                </value>
                <value>
                    <fullName>da ripetere</fullName>
                </value>
                <value>
                    <fullName>ia sincronizzazione</fullName>
                </value>
                <value>
                    <fullName>ia codifica errori</fullName>
                </value>
                <value>
                    <fullName>ia accettazione</fullName>
                </value>
                <value>
                    <fullName>in refertazione</fullName>
                </value>
                <value>
                    <fullName>ia controllo</fullName>
                </value>
                <value>
                    <fullName>ia revisione</fullName>
                </value>
                <value>
                    <fullName>ia comunicazione</fullName>
                </value>
                <value>
                    <fullName>comunicato</fullName>
                </value>
                <value>
                    <fullName>ia pagamento</fullName>
                </value>
                <value>
                    <fullName>IA conferma batt.</fullName>
                </value>
                <value>
                    <fullName>IA consenso</fullName>
                </value>
                <value>
                    <fullName>Sollecitare contratto</fullName>
                </value>
                <value>
                    <fullName>Sollecitare decisione</fullName>
                </value>
                <value>
                    <fullName>DaG perdita</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_redemption2__c</fullName>
        <formula>TEXT(StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status per redemption</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_redemption__c</fullName>
        <label>Status redemption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TAT__c</fullName>
        <formula>Data_referto_comunicato__c - Data_ricezione_analisi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telefono_reperibile__c</fullName>
        <label>Telefono reperibile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tempo_ricezione_analisi__c</fullName>
        <formula>Data_ricezione_analisi__c +30</formula>
        <label>Tempo ricezione analisi</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tessuto__c</fullName>
        <label>Tessuto cordonale</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.ListPrice</field>
            <operation>equals</operation>
            <value>480</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test_Leda__c</fullName>
        <label>Test Leda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aperto</fullName>
                </value>
                <value>
                    <fullName>In firma</fullName>
                </value>
                <value>
                    <fullName>Prospect perso</fullName>
                </value>
                <value>
                    <fullName>preparto</fullName>
                </value>
                <value>
                    <fullName>in attesa  parto</fullName>
                </value>
                <value>
                    <fullName>post parto</fullName>
                </value>
                <value>
                    <fullName>Chiuso vinto</fullName>
                </value>
                <value>
                    <fullName>chiuso perso</fullName>
                </value>
                <value>
                    <fullName>in perdita</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipizzazione_HLA__c</fullName>
        <label>Tipizzazione HLA</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ListPrice</field>
            <operation>equals</operation>
            <value>320</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tipo_Origine__c</fullName>
        <label>Tipo Origine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da verificare</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Non territoriale e non digital</fullName>
                </value>
                <value>
                    <fullName>Territoriale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_di_spedizione__c</fullName>
        <label>Tipo di spedizione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DHL EXPRESS 12:00</fullName>
                </value>
                <value>
                    <fullName>DHL EXPRESS</fullName>
                </value>
                <value>
                    <fullName>Express 12</fullName>
                    <isActive>false</isActive>
                    <label>Express 12</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <isActive>false</isActive>
                    <label>Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_origine_in_fase_di_ordine__c</fullName>
        <label>Tipo origine in fase di ordine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Da verificare</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Non territoriale e non digital</fullName>
                </value>
                <value>
                    <fullName>Territoriale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_parto__c</fullName>
        <label>Tipo parto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Singolo</fullName>
                </value>
                <value>
                    <fullName>Gemellare</fullName>
                </value>
                <value>
                    <fullName>Trigemellare</fullName>
                </value>
                <value>
                    <fullName>Quadrigemellare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titolo_Contatto_Fatturazione__c</fullName>
        <label>Titolo Intestatario Fattura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sig.</fullName>
                </value>
                <value>
                    <fullName>Sig.ra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titolo_Fatturazione__c</fullName>
        <label>Titolo Fatturazione</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultima_nota__c</fullName>
        <label>Ultima nota</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Via_fatturazione__c</fullName>
        <label>Via fatturazione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Via_spedizione__c</fullName>
        <label>Indirizzo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X20_anni__c</fullName>
        <label>Estensione durata</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.ListPrice</field>
            <operation>equals</operation>
            <value>200, 330, 550, 770</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>campo_tecnico_opportunita__c</fullName>
        <label>campo tecnico opportunita</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_account_correlato__c</fullName>
        <formula>Account.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>email account correlato</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Tutte le opportunità</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Mie_opportunit_aperte</fullName>
        <columns>Data_ricontatto__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Giorni_da_ultimo_contatto__c</columns>
        <columns>Data_ultimo_contatto__c</columns>
        <columns>Giorni_mancanti__c</columns>
        <columns>Data_presunta_parto__c</columns>
        <columns>Ultima_nota__c</columns>
        <columns>Origine__c</columns>
        <columns>Canale__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aperto</value>
        </filters>
        <filters>
            <field>In_perdita__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Tutte le mie opportunità aperte</label>
    </listViews>
    <listViews>
        <fullName>Mie_opportunit_aperte_oggi</fullName>
        <columns>Data_ricontatto__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Giorni_da_ultimo_contatto__c</columns>
        <columns>Data_ultimo_contatto__c</columns>
        <columns>Giorni_mancanti__c</columns>
        <columns>Data_presunta_parto__c</columns>
        <columns>Ultima_nota__c</columns>
        <columns>Origine__c</columns>
        <columns>Canale__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aperto</value>
        </filters>
        <filters>
            <field>Data_ricontatto__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>In_perdita__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Tutte le mie opportunità aperte oggi</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Opp_aperte_oggi_e_scad_ML</fullName>
        <booleanFilter>1 AND 2 and 3 and 4</booleanFilter>
        <columns>Data_ricontatto__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Giorni_da_ultimo_contatto__c</columns>
        <columns>Data_ultimo_contatto__c</columns>
        <columns>Giorni_mancanti__c</columns>
        <columns>Data_presunta_parto__c</columns>
        <columns>Ultima_nota__c</columns>
        <columns>Origine__c</columns>
        <columns>Canale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aperto</value>
        </filters>
        <filters>
            <field>Data_ricontatto__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Lotta</value>
        </filters>
        <filters>
            <field>In_perdita__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Opp aperte oggi e scad - ML</label>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Opp_aperte_oggi_e_scad_MM</fullName>
        <booleanFilter>1 AND 2 and 3 and 4</booleanFilter>
        <columns>Data_ricontatto__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Giorni_da_ultimo_contatto__c</columns>
        <columns>Data_ultimo_contatto__c</columns>
        <columns>Giorni_mancanti__c</columns>
        <columns>Data_presunta_parto__c</columns>
        <columns>Ultima_nota__c</columns>
        <columns>Origine__c</columns>
        <columns>Canale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aperto</value>
        </filters>
        <filters>
            <field>Data_ricontatto__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Mercatali</value>
        </filters>
        <filters>
            <field>In_perdita__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Opp aperte oggi e scad - MM</label>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Opp_aperte_oggi_e_scad_RT</fullName>
        <booleanFilter>1 AND 2 and 3 and 4</booleanFilter>
        <columns>Data_ricontatto__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Giorni_da_ultimo_contatto__c</columns>
        <columns>Data_ultimo_contatto__c</columns>
        <columns>Giorni_mancanti__c</columns>
        <columns>Data_presunta_parto__c</columns>
        <columns>Ultima_nota__c</columns>
        <columns>Origine__c</columns>
        <columns>Canale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aperto</value>
        </filters>
        <filters>
            <field>Data_ricontatto__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Tassinari</value>
        </filters>
        <filters>
            <field>In_perdita__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Opp aperte oggi e scad - RT</label>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Opp_aperte_oggi_e_scad_SC</fullName>
        <booleanFilter>1 AND 2 and 3 and 4</booleanFilter>
        <columns>Data_ricontatto__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Giorni_da_ultimo_contatto__c</columns>
        <columns>Data_ultimo_contatto__c</columns>
        <columns>Giorni_mancanti__c</columns>
        <columns>Data_presunta_parto__c</columns>
        <columns>Ultima_nota__c</columns>
        <columns>Origine__c</columns>
        <columns>Canale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aperto</value>
        </filters>
        <filters>
            <field>Data_ricontatto__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Cavaliere</value>
        </filters>
        <filters>
            <field>In_perdita__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Opp aperte oggi e scad - SC</label>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Opp_aperte_oggi_e_scad_SS</fullName>
        <booleanFilter>1 AND 2 and 3 and 4</booleanFilter>
        <columns>Data_ricontatto__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Giorni_da_ultimo_contatto__c</columns>
        <columns>Data_ultimo_contatto__c</columns>
        <columns>Giorni_mancanti__c</columns>
        <columns>Data_presunta_parto__c</columns>
        <columns>Ultima_nota__c</columns>
        <columns>Origine__c</columns>
        <columns>Canale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aperto</value>
        </filters>
        <filters>
            <field>Data_ricontatto__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Saraino</value>
        </filters>
        <filters>
            <field>In_perdita__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Opp aperte oggi e scad - SS</label>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Opp_aperte_oggi_e_scad_VH</fullName>
        <booleanFilter>1 AND 2 and 3 and 4</booleanFilter>
        <columns>Data_ricontatto__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Giorni_da_ultimo_contatto__c</columns>
        <columns>Data_ultimo_contatto__c</columns>
        <columns>Giorni_mancanti__c</columns>
        <columns>Data_presunta_parto__c</columns>
        <columns>Ultima_nota__c</columns>
        <columns>Origine__c</columns>
        <columns>Canale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aperto</value>
        </filters>
        <filters>
            <field>Data_ricontatto__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Hasa</value>
        </filters>
        <filters>
            <field>In_perdita__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Opp aperte oggi e scad - VH</label>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Opportunit_pending</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Aperto</value>
        </filters>
        <filters>
            <field>Data_di_desiderata_ricezione__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Data_di_spedizione_desiderata__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Data_spedizione_kit_da_decidere__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Opportunità pending</label>
    </listViews>
    <recordTypes>
        <fullName>SG</fullName>
        <active>true</active>
        <businessProcess>SG</businessProcess>
        <label>SG</label>
    </recordTypes>
    <recordTypes>
        <fullName>SS</fullName>
        <active>true</active>
        <businessProcess>SS</businessProcess>
        <label>SS</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Altre_origine_senza_specifica</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(OR(ISPICKVAL(Origine__c, &quot;Altro&quot;),ISPICKVAL( Origine_in_fase_di_ordine__c , &quot;Altro&quot;),ISPICKVAL(Origine__c, &quot;Pieghevole&quot;),ISPICKVAL( Origine_in_fase_di_ordine__c , &quot;Pieghevole&quot;),ISPICKVAL(Origine__c, &quot;Corso Preparto&quot;),ISPICKVAL( Origine_in_fase_di_ordine__c , &quot;Corso Preparto&quot;)),ISBLANK(  Dettaglio_origine_aperto__c  )), NOT( Dettaglio_origine_sconosciuto__c ))</errorConditionFormula>
        <errorDisplayField>Dettaglio_origine_aperto__c</errorDisplayField>
        <errorMessage>Devi specificare il dettaglio nel campo &quot;Dettaglio origine aperto&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Controlla_dati_completi_per_parto</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISNULL(Data_ora_effettiva_parto__c)),OR(ISBLANK(Data_ora_effettiva_parto__c),ISBLANK(Reparto__c   ),ISBLANK(Piano__c),ISBLANK(Stanza__c),ISBLANK(Letto__c),ISBLANK(Telefono_reperibile__c),NOT(OR(ISPICKVAL(Corriere__c,&quot;DHL Saturday Sameday&quot;) ,ISPICKVAL(Corriere__c,&quot;DHL&quot;) ,ISPICKVAL(Corriere__c,&quot;Duimex&quot;))) ,ISBLANK(Ospedale_Punto_prelievo__c),ISBLANK( AWB_verso_lab__c ),IF(ISPICKVAL(Tipo_parto__c,
&quot;Singolo&quot;),ISBLANK(  Codice_campione_1__c ),IF(ISPICKVAL(Tipo_parto__c,
&quot;Gemellare&quot;),OR(ISBLANK(  Codice_campione_1__c ),ISBLANK(  Codice_campione_2__c )),IF(ISPICKVAL(Tipo_parto__c, &quot;Trigemellare&quot;), OR(ISBLANK(  Codice_campione_1__c ),ISBLANK(  Codice_campione_2__c ),ISBLANK(  Codice_campione_3__c )),OR(ISBLANK(  Codice_campione_1__c ),ISBLANK(  Codice_campione_2__c ),ISBLANK(  Codice_campione_3__c ),ISBLANK(  Codice_campione_4__c )))))))</errorConditionFormula>
        <errorMessage>Compila tutte le informazioni per il parto!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Controllo_spedizione_kit</fullName>
        <active>false</active>
        <errorConditionFormula>OR( AND(ISCHANGED(Data_di_desiderata_ricezione__c ),  PRIORVALUE( Data_di_desiderata_ricezione__c ) = NULL),
AND(ISCHANGED(Data_di_spedizione_desiderata__c ),  PRIORVALUE( Data_di_spedizione_desiderata__c ) = NULL))</errorConditionFormula>
        <errorMessage>xxx</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Data_parto_passata</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Data_presunta_parto__c &lt; TODAY(), ISCHANGED(Data_presunta_parto__c))</errorConditionFormula>
        <errorDisplayField>Data_presunta_parto__c</errorDisplayField>
        <errorMessage>Data presunta parto passata, non possibile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fase_non_modificabile</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(ISPICKVAL(StageName,&quot;In firma&quot;),NOT(OR(NOT(ISNULL(Data_di_spedizione_desiderata__c)),Data_spedizione_kit_da_decidere__c))),
AND(ISPICKVAL(StageName,&quot;Preparto&quot;),ISNULL(Data_firma_contratto__c)),
AND(ISPICKVAL(StageName,&quot;In attesa parto&quot;),NOT(OR(ISPICKVAL( Rilascio_nulla_osta__c ,&quot;si&quot;),ISPICKVAL( Rilascio_nulla_osta__c ,&quot;il giorno del parto&quot;)))),
AND(ISPICKVAL(StageName,&quot;Postparto&quot;),ISNULL( Data_ora_attivazione__c )),
AND(ISPICKVAL(StageName,&quot;Chiuso vinto&quot;), NOT(Stato_amministrazione__c  = &quot;Chiuso&quot;)))</errorConditionFormula>
        <errorMessage>La fase non deve essere modificata</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Metti_agente_se_metti_Profesisonal</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Origine__c, &quot;Professional&quot;), ISBLANK( Agente__c ))</errorConditionFormula>
        <errorDisplayField>Agente__c</errorDisplayField>
        <errorMessage>Inserire Agente</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_puoi_salvare_origine_senza_specifica</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(OR(ISPICKVAL(Origine__c, &quot;Specialista&quot;),ISPICKVAL( Origine_in_fase_di_ordine__c , &quot;Specialista&quot;)),ISBLANK(Dettaglio__c)), NOT( Dettaglio_origine_sconosciuto__c ))</errorConditionFormula>
        <errorDisplayField>Dettaglio__c</errorDisplayField>
        <errorMessage>Devi specificare il ginecologo nel campo &quot;Dettaglio origine&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Professional_senza_specifica</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(OR(ISPICKVAL(Origine__c, &quot;Professional&quot;),ISPICKVAL( Origine_in_fase_di_ordine__c , &quot;Professional&quot;)),ISBLANK( Dettaglio_origine_professional__c )), NOT( Dettaglio_origine_sconosciuto__c ))</errorConditionFormula>
        <errorDisplayField>Dettaglio_origine_professional__c</errorDisplayField>
        <errorMessage>Devi specificare il professional nel campo &quot;Dettaglio origine professional&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>origine_PA_senza_specifica</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(OR(ISPICKVAL(Origine__c, &quot;Programma Amico&quot;),ISPICKVAL( Origine_in_fase_di_ordine__c , &quot;Programma Amico&quot;)),ISBLANK(Dettaglio_programma_amico__c)), NOT( Dettaglio_origine_sconosciuto__c ))</errorConditionFormula>
        <errorDisplayField>Dettaglio__c</errorDisplayField>
        <errorMessage>Devi specificare il programma amico nel campo &quot;Dettaglio origine&quot;</errorMessage>
    </validationRules>
</CustomObject>